--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.example.ma.jxnuwirelessnethelper"
+        applicationId "pers.jxnu.maguozhuang.jxnuwirelessnethelper"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0测试版"
+        versionCode 3
+        versionName "1.2(beta)"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -17,6 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 dependencies {
