--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Thu Jan 25 16:53:14 CST 2018
-systemProp.http.proxyHost=android-mirror.bugly.qq.com
+#Thu Feb 22 20:23:13 CST 2018
+systemProp.http.proxyHost=mirrors.neusoft.edu.cn
+systemProp.http.nonProxyHosts=github.com
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=8080
+systemProp.http.proxyPort=80
