--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,13 +41,15 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".OtherActivity">
+        <activity android:name=".OtherActivity"
+            android:label="">
         </activity>
         <activity android:name=".SecretActivity">
         </activity>
         <activity android:name=".WebActivity">
         </activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+            android:label="">
         </activity>
 
         <service
